# video2minutes

./: .coverage  .eslintrc.js  .gitignore  .prettierrc.js  CONTRIBUTING.md  LICENSE  README.md  api_spec.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  render.yaml  requirements.txt  static-analysis.sh
.github/workflows/: e2e-tests.yml  static-analysis.yml
docs/: API_REFERENCE.md  CHAT_FEATURE_DESIGN.md  DEPLOYMENT_SECURITY.md  DESIGN.md  E2E_TEST_SCENARIOS.md  ENVIRONMENT_VARIABLES.md  README.md  SECURITY.md  SESSION_MANAGEMENT_DESIGN.md  slack-message-template.md
playwright-report/: index.html
reports/static-analysis/: bandit_20250614_061043.txt  black_20250614_060638.txt  isort_20250614_045400.txt  mypy_20250614_045400.txt  mypy_20250614_061043.txt  prettier_frontend_20250614_060638.txt  prettier_tests_20250614_060638.txt  prettier_tests_20250614_061043.txt  pylint_20250614_045400.txt  pylint_20250614_061043.txt  safety_20250614_045400.txt  safety_20250614_061043.txt  summary_20250614_045400.html  summary_20250614_060638.html  summary_20250614_061043.html
src/backend/: .env.example  .gitignore  Dockerfile  M4A_INTEGRATION_SUMMARY.md  check_available_models.py  env.example  quick_test.py  requirements.txt  simple_citation_test.py  test_api_response.py  test_citation_feature.py  test_edit_history.py  test_full_chat.py  test_improved_chat.py  test_real_openai.py
src/backend/app/: config.py  main.py  models.py  store.py
src/backend/app/auth/: __init__.py  api_key.py
src/backend/app/models/: __init__.py  chat.py
src/backend/app/prompts/: chat_prompts.py
src/backend/app/services/: citation_service.py  edit_executor.py  edit_history_service.py  edit_intent_analyzer.py  minutes_generator.py  openai_service.py  task_queue.py  transcription.py  video_processor.py
src/backend/app/store/: __init__.py  chat_store.py  persistent_store.py  session_store.py  tasks_store.py
src/backend/app/utils/: file_handler.py  logger.py  session_manager.py  timezone_utils.py
src/backend/scripts/: generate_api_key.py  test_auth.py
src/backend/storage/: sessions.json  tasks.json
src/cli/: README.md  README_M4A.md  process_m4a.py  video2minutes.py
src/frontend/: .env.example  .eslintrc.cjs  MARKDOWN_FEATURES.md  README.md  env.example  eslint-report.json  index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.vue  main.js
storage/: sessions.json  tasks.json
task/: 2025-06-13-todo.md
tests/: README.md
tests/cli/: test_video2minutes_cli.py
tests/e2e/: README.md  basic-flow.spec.js  error-handling.spec.js  global-setup.js  global-teardown.js  parallel-processing.spec.js  ui-interaction.spec.js
tests/e2e/utils/: test-helpers.js
tests/fixtures/: conftest.py
tests/unit/: .env.test  conftest.py  test_api_endpoints.py  test_api_endpoints_extended.py  test_chat_endpoints.py  test_chat_prompts.py  test_chat_store.py  test_citation_service.py  test_config.py  test_edit_intent_analyzer.py  test_error_handling.py  test_file_handler.py  test_logger.py  test_logging_middleware.py  test_main.py  test_main_extended.py  test_minutes_generator.py  test_models.py  test_openai_service.py  test_store.py  test_task_queue.py  test_timezone_utils.py  test_transcription.py  test_transcription_extended.py  test_video_processor.py  test_video_processor_extended.py  test_video_processor_simple.py
tests/unit-js/: basic-setup.test.js  package-lock.json  package.json  setup-enhanced.js  setup.js  vitest.config.js
tests/unit-js/components/: Dashboard-integration.test.js  FileUploader-advanced-fixed.test.js  FileUploader-advanced.test.js  FileUploader-integrated.test.js  FileUploader-simple.test.js  FileUploader.test.js  Settings-integration.test.js  TaskList-simple.test.js  simple-fileuploader.test.js
tests/unit-js/html/: index.html
tests/unit-js/integration/: unit-e2e-bridge.test.js
tests/unit-js/services/: api.test.js  simple-api.test.js
tests/unit-js/stores/: TasksStore-fixed.test.js  TasksStore-integrated.test.js  simple-tasks.test.js  tasks.test.js
tests/unit-js/test-setup/: pinia-setup.js  primevue-setup.js  toast-mock-fix.js  vue-integration.js
tests/unit-js/utils/: dateUtils.test.js  format.test.js  markdown.test.js  test-helpers.js
(+26 files in other folders)
